// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs/Input DarkBackground smoke-test 1`] = `
<div class="sc-gEvEer gcOOwi">
  <div style="max-width: 300px;">
    <div class="sc-fqkvVR hUAKJH"
         placeholder="Name"
    >
      <input placeholder="Name"
             class="sc-eqUAAy iLusnC"
      >
    </div>
  </div>
</div>
`;

exports[`Inputs/Input Filled play-test 1`] = `
<div class="sc-gEvEer gcOOwi">
  <div style="max-width: 300px;">
    <div class="sc-fqkvVR hUAKJH"
         placeholder="Name"
    >
      <input placeholder="Name"
             data-testid="input"
             class="sc-eqUAAy iLusnC"
      >
      <span color="primary"
            data-testid="submit"
            class="sc-aXZVg dUQDlI sc-dcJsrY iPuqvC"
      >
        <svg viewbox="0 0 50 50"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path d="M0 0h25.722v48H0z">
            </path>
          </defs>
          <g transform="translate(12 1)"
             fill="none"
             fill-rule="evenodd"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
                  fill="currentColor"
            >
            </path>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Inputs/Input LightBackground smoke-test 1`] = `
<div class="sc-gEvEer kJmFai">
  <div style="max-width: 300px;">
    <div class="sc-fqkvVR bJnDBG"
         placeholder="Name"
    >
      <input placeholder="Name"
             class="sc-eqUAAy jZRVaQ"
      >
    </div>
  </div>
</div>
`;

exports[`Inputs/Input WithEndDecoration smoke-test 1`] = `
<div class="sc-gEvEer gcOOwi">
  <div style="max-width: 300px;">
    <div class="sc-fqkvVR hUAKJH"
         placeholder="Cosa cerchi?"
    >
      <input placeholder="Cosa cerchi?"
             class="sc-eqUAAy iLusnC"
      >
      <span color="primary"
            class="sc-aXZVg dUQDlI"
            style="margin-right: 20px;"
      >
        <svg viewbox="0 0 50 50"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path d="M0 0h47.956v48H0z">
            </path>
          </defs>
          <g fill="none"
             fill-rule="evenodd"
          >
            <g transform="translate(1 1)">
              <path d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                    fill="currentColor"
              >
              </path>
            </g>
            <path d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
                  fill="currentColor"
            >
            </path>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Inputs/Input WithError smoke-test 1`] = `
<div class="sc-gEvEer gcOOwi">
  <div style="max-width: 300px;">
    <div class="sc-fqkvVR haQUBC"
         placeholder="Name"
    >
      <input placeholder="Name"
             class="sc-eqUAAy iLusnC"
             value="An invalid value"
      >
    </div>
  </div>
</div>
`;

exports[`Inputs/Input WithStartDecoration smoke-test 1`] = `
<div class="sc-gEvEer gcOOwi">
  <div style="max-width: 300px;">
    <div class="sc-fqkvVR hUAKJH"
         placeholder="Name"
    >
      <span color="primary"
            class="sc-aXZVg dJGlPM"
            style="margin-left: 20px;"
      >
        <svg viewbox="0 0 50 50"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path d="M0 0h25.722v48H0z">
            </path>
          </defs>
          <g transform="translate(12 1)"
             fill="none"
             fill-rule="evenodd"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
                  fill="currentColor"
            >
            </path>
          </g>
        </svg>
      </span>
      <input placeholder="Name"
             class="sc-eqUAAy iLusnC"
      >
    </div>
  </div>
</div>
`;
